# voxelator

./: .gitignore  README.adoc  pyproject.toml  requirements.txt  voxelator.py
tools/: flyingcubes.py  flyingcubes_direct.py  flyingcubes_voxels.py  gyroid2voxels.py  stl2voxels.py  voxel2stl.py
tutorial/: sponge.py  totem.py
voxelator/: convertors.py  display.py  flyingcubes_voxels.py  generators.py  gyroid.py  operators.py  stl2voxel.py  tuto.py  voxel2stl.py
