[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "voxelator"
version="1.0.0"
dependencies = [
    "jsonargparse", "rich",
    "numpy", "matplotlib", "numpy-stl",
    "scikit-image", "open3d"
] # project  dependencies

[project.optional-dependencies]
jupyter = ["jupyter"]

[project.scripts]
totem="tutorial.totem:create_totem_cli"

[tool.setuptools]
packages = ["voxelator", "tutorial"]