[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "voxelator"
version="1.0.0"
dependencies = [
    "jsonargparse", "rich",
    "numpy==1.26", "matplotlib",
    "scikit-image", "trimesh", "manifold3d", "pyrender"
] # project  dependencies

[project.optional-dependencies]
jupyter = ["jupyter"]

[project.scripts]
totem="tutorial.totem:create_totem_cli"

[tool.setuptools]
packages = ["voxelator", "tutorial"]